--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,8 +12,7 @@ spring:
     show-sql: true
   redis:
     port: 6379
-    password:
+    password: SENHA
     host: locahost
-    timeToLive: 60
   server:
     port: 8080
